updated homepage with banner and title, links to other pages, and a footer which includes socials buttons - can copy and paste the footer code onto other pages

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
   <link href="css/index.css" rel="stylesheet">
 </head>
+<style>
+
+</style>
 <body>
 
 <header>
@@ -22,7 +25,7 @@
     <span class="navbar-toggler-icon">
   </button>
 
-  </span><span class="navbar-text">For the mid-morning munchies</span>
+  <span class="navbar-text">For the mid-morning munchies</span>
 
   <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
     <ul class="navbar-nav ">
@@ -39,3 +42,53 @@
   </div>
 </nav>
 </header>
+
+<main role="main">
+
+<div class="jumboContainer">
+  <div class="jumbotron text-white rounded">
+    <div class="jumoboText">
+      <h1 class="headerText">Welcome to All About Brunch</h1>
+      <p class="lead font-italic">Your one-stop shop for recipes, inspo and local hotspots for the best meal of the day.</p>
+    </div>
+  </div>
+</div>
+
+<div class="container marketing">
+  <div class="row">
+   <div class="col-lg-4">
+     <img class="rounded-circle" src="pics/pochedeggs.jpg" alt="Generic placeholder image" width="140" height="140">
+     <h2>About</h2>
+     <p>Who we are, what we're doing, and why we love brunch.</p>
+     <p><a class="btn btn-secondary" href="pages/about.html" role="button">Read more...</a></p>
+   </div><!-- /.col-lg-4 -->
+   <div class="col-lg-4">
+     <img class="rounded-circle" src="pics/hotspotsplaceholder.jpg" alt="Generic placeholder image" width="140" height="140">
+     <h2>Hotspots</h2>
+     <p>We've rounded up some of the best places you can find brunch in the city.</p>
+     <p><a class="btn btn-secondary" href="pages/hotspots.html" role="button">Read more...</a></p>
+   </div><!-- /.col-lg-4 -->
+   <div class="col-lg-4">
+     <img class="rounded-circle" src="pics/recipesplaceholder.jpg" alt="Generic placeholder image" width="140" height="140">
+     <h2>Recipes</h2>
+     <p>Don't fancy going out? Check out some of our delicious brunch recipes here.</p>
+     <p><a class="btn btn-secondary" href="pages/recipes.html" role="button">Read more...</a></p>
+   </div><!-- /.col-lg-4 -->
+  </div><!-- /.row -->
+
+<!-- <div class="history col-lg-8">
+  <h2 class="historyHead font-italic">What is Brunch...?</h2>
+  <p class="historyBody">
+</div> -->
+
+<footer class="container">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <p class="float-right">
+  <a href="#" class="fa fa-facebook"></a>
+  <a href="#" class="fa fa-twitter"></a>
+  <a href="#" class="fa fa-instagram"></a>
+  <a href="#" class="fa fa-youtube"></a>
+  <a href="#" class="fa fa-tumblr"></a>
+  <p>&copy; 2018 All About Brunch &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+</footer>
+</main>
