trying to commit homepage updates to git hub, hopefully so they can be seen by everyone else

--- a/index.html
+++ b/index.html
@@ -76,10 +76,31 @@
    </div><!-- /.col-lg-4 -->
   </div><!-- /.row -->
 
-<!-- <div class="history col-lg-8">
-  <h2 class="historyHead font-italic">What is Brunch...?</h2>
-  <p class="historyBody">
-</div> -->
+<div class="highlightsContainer">
+
+</div>
+
+<div class="form">
+  <div class="formHead">
+    <h3>Love brunch like us?</h3>
+    <p>Subscribe to our weekly newsletter here:</p>
+  </div>
+  <form>
+    <div class="row">
+      <div class="form-group col">
+        <label for="formGroupExampleInput">Name</label>
+        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Full name here">
+      </div>
+      <div class="form-group col">
+        <label for="formGroupExampleInput2">Email</label>
+        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Email here">
+      </div>
+    </div>
+  </div>
+  </form>
+  <button type="submit" class="btnForm btn-primary">Submit</button>
+
+</main>
 
 <footer class="container">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -91,4 +112,3 @@
   <a href="#" class="fa fa-tumblr"></a>
   <p>&copy; 2018 All About Brunch &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
 </footer>
-</main>
