--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
   <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
     <ul class="navbar-nav ">
       <li class="nav-item active">
-        <a class="nav-link" href="pages/about.html">About<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="pages/about.html">About<span class="sr-only"></span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="pages/hotspots.html">Hotspots<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="pages/hotspots.html">Hotspots<span class="sr-only"></span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="pages/recipes.html">Recipes<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="pages/recipes.html">Recipes<span class="sr-only"></span></a>
       </li>
     </ul>
   </div>
@@ -67,14 +67,14 @@
      <h2>Hotspots</h2>
      <p>We've rounded up some of the best places you can find brunch in the city.</p>
      <p><a class="btn btn-secondary" href="pages/hotspots.html" role="button">Read more...</a></p>
-   </div><!-- /.col-lg-4 -->
+   </div>
    <div class="col-lg-4">
      <img class="rounded-circle" src="pics/recipesplaceholder.jpg" alt="Generic placeholder image" width="140" height="140">
      <h2>Recipes</h2>
      <p>Don't fancy going out? Check out some of our delicious brunch recipes here.</p>
      <p><a class="btn btn-secondary" href="pages/recipes.html" role="button">Read more...</a></p>
-   </div><!-- /.col-lg-4 -->
-  </div><!-- /.row -->
+   </div>
+  </div>
 
 <div class="highlightsContainer">
 
@@ -96,9 +96,9 @@
         <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Email here">
       </div>
     </div>
-  </div>
   </form>
-  <button type="submit" class="btnForm btn-primary">Submit</button>
+</div>
+<button type="submit" class="btnForm btn-primary">Submit</button>
 
 </main>
 
