final changes before merging all our code

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <div class="jumbotron text-white rounded">
     <div class="jumoboText">
       <h1 class="headerText">Welcome to All About Brunch</h1>
-      <p class="lead font-italic">Your one-stop shop for recipes, inspo and local hotspots for the best meal of the day.</p>
+      <p class="lead font-italic">Your one-stop shop for local hotspots and local hotspots for the best meal of the day.</p>
     </div>
   </div>
 </div>
@@ -58,20 +58,20 @@
   <div class="row">
    <div class="col-lg-4">
      <img class="rounded-circle" src="pics/pochedeggs.jpg" alt="Generic placeholder image" width="140" height="140">
-     <h2>About</h2>
-     <p>Who we are, what we're doing, and why we love brunch.</p>
+     <h2 class="pageLinks">About</h2>
+     <p class="pageDescript">Who we are, what we're doing, and why we love brunch.</p>
      <p><a class="btn btn-secondary" href="pages/about.html" role="button">Read more...</a></p>
-   </div><!-- /.col-lg-4 -->
+   </div>
    <div class="col-lg-4">
      <img class="rounded-circle" src="pics/hotspotsplaceholder.jpg" alt="Generic placeholder image" width="140" height="140">
-     <h2>Hotspots</h2>
-     <p>We've rounded up some of the best places you can find brunch in the city.</p>
+     <h2 class="pageLinks">Hotspots</h2>
+     <p class="pageDescript">We've rounded up some of the best places you can find brunch in the city.</p>
      <p><a class="btn btn-secondary" href="pages/hotspots.html" role="button">Read more...</a></p>
    </div>
    <div class="col-lg-4">
      <img class="rounded-circle" src="pics/recipesplaceholder.jpg" alt="Generic placeholder image" width="140" height="140">
-     <h2>Recipes</h2>
-     <p>Don't fancy going out? Check out some of our delicious brunch recipes here.</p>
+     <h2 class="pageLinks">Recipes</h2>
+     <p class="pageDescript">Don't fancy going out? Check out some of our delicious brunch recipes here.</p>
      <p><a class="btn btn-secondary" href="pages/recipes.html" role="button">Read more...</a></p>
    </div>
   </div>
