Bug fixes. CSS styled.
Nav bar and footer styled. Columns nested so image is embedded. (Jack checked!)

--- a/pages/recipes.html
+++ b/pages/recipes.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=
-  , initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <title>Recipes</title>
@@ -12,125 +11,135 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="../../css/recipes.css">
+  <link rel="stylesheet" href="../css/recipes.css">
+</head>
 
-  <header>
-  <nav class=“navbar navbar-expand-md fixed-top navbar-light”>
-   <a class=“navbar-brand” href=“../index.html”>All About Brunch</a>
-   <button class=“navbar-toggler” type=“button” data-toggle=“collapse” data-target=“#navbarTogglerDemo02” aria-controls=“navbarTogglerDemo02" aria-expanded=“false” aria-label=“Toggle navigation”>
-     <span class=“navbar-toggler-icon”>
-   </button>
+<header>
+  <nav class="navbar navbar-expand-md navbar-light">
+    <a class="navbar-brand" href="../index.html">All About Brunch</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-   <span class=“navbar-text”>For the mid-morning munchies</span>
+    <span class="navbar-text">For the mid-morning munchies</span>
 
-   <div class=“collapse navbar-collapse justify-content-end” id=“navbarTogglerDemo02">
-     <ul class=“navbar-nav “>
-       <li class=“nav-item active”>
-         <a class=“nav-link” href=“pages/about.html”>About<span class=“sr-only”></span></a>
-       </li>
-       <li class=“nav-item active”>
-         <a class=“nav-link” href=“pages/hotspots.html”>Hotspots<span class=“sr-only”></span></a>
-       </li>
-       <li class=“nav-item active”>
-         <a class=“nav-link” href=“pages/recipes.html”>Recipes<span class=“sr-only”></span></a>
-       </li>
-     </ul>
-   </div>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
+      <ul class="navbar-nav ">
+        <li class="nav-item active">
+          <a class="nav-link" href="about.html">About<span class="sr-only"></span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="hotspots.html">Hotspots<span class="sr-only"></span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="recipes.html">Recipes<span class="sr-only"></span></a>
+        </li>
+      </ul>
+    </div>
   </nav>
-  </header>
+</header>
 
-  </head>
-  <body>
-  </div>
-      <h1>Recipes!</h1>
-  </div>
-
+  <div class="indent">
 <h3>Our favourite brunch recipes</h3>
 <p>On a lazy weekend day, we like nothing more than indulging in some delicious grub! Below are some of our favourite brunch recipes. Alternatively, if you're a few ingredients short, do visit our hotspots page, for some of the best brunches in town.</p>
+</div>
 
 
-<div =class "recipes">
+<div class="recipes indent">
   <h2>French Toast</h2>
 
   <div class="row">
     <div class="col-8">
-  <h4>Ingredients</h4>
+      <div class="row">
+        <div class="col-12">
+          <h4>Ingredients</h4>
 
-<ul style="list-style-type:disc">
-  <li>2 medium free range eggs</li>
-  <li>40ml full fat milk</li>
-  <li>2 slices of slightly stale sour dough</li>
-  <li>1 knob of butter</li>
-  <li>sprinkling of brown sugar</li>
-</ul>
-  </div>
+          <ul style="list-style-type:disc">
+            <li>2 medium free range eggs</li>
+            <li>40ml full fat milk</li>
+            <li>2 slices of slightly stale sour dough</li>
+            <li>1 knob of butter</li>
+            <li>sprinkling of brown sugar</li>
+          </ul>
+        </div>
 
-    <div class="col-8">
-  <h4>Method</h4>
+        <div class="col-12">
+          <h4>Method</h4>
 
-  <ol type="1">
-  <li>Crack the eggs into a bowl and whisk in the milk. </li>
-  <li>Gently heat the knob of butter in the frying pan.</li>
-  <li>Soak the slices of bread in the egg/ milk mixture, absorbing as much as possible.</li>
-  <li>Place the soaked bread into the pan and lightly fry on each side until the outside is browned and the bread is softer.</li>
-  <li>Finally sprinkle the brown sugar over the french toast, allowing it to sligthly caramalise before tucking in.</li>
-  </ol>
+          <ol type="1">
+            <li>Crack the eggs into a bowl and whisk in the milk. </li>
+            <li>Gently heat the knob of butter in the frying pan.</li>
+            <li>Soak the slices of bread in the egg/ milk mixture, absorbing as much as possible.</li>
+            <li>Place the soaked bread into the pan and lightly fry on each side until the outside is browned and the bread is softer.</li>
+            <li>Finally sprinkle the brown sugar over the french toast, allowing it to sligthly caramalise before tucking in.</li>
+          </ol>
+        </div>
+      </div>
     </div>
 
     <div class="col-4">
- <img src="French toast.jpg" class="img-rounded" alt="FrenchToast" style="width:400px;height:600px;">
+      <div class="imagecontainer">
+      <img src="French toast.jpg" class="img-rounded" alt="FrenchToast" style="width:300px;height:350px;">
+      </div>
     </div>
 
-
- <div =class "recipes">
-   <h2>Pancakes</h2>
-
-   <div class="row">
-     <div class="col-8">
-   <h4>Ingredients</h4>
-
-   <ul style="list-style-type:disc">
-     <li>100g plain flour</li>
-     <li>300ml milk</li>
-     <li>2 large free range eggs</li>
-     <li>small dash of oil</li>
-     <li>chopped berries</li>
-     <li>maple syrup (optional)</li>
-   </ul>
   </div>
+</div>
+<div class="recipes indent">
+  <h2>Pancakes</h2>
 
-  <div class="col-8">
-  <h4>Method</h4>
+  <div class="row">
+    <div class="col-8">
+      <div class="row">
+        <div class="col-12">
+          <h4>Ingredients</h4>
 
- <ol type="1">
-   <li>Place eggs, flour and milk into a bowl and whisk into a smooth batter.</li>
-   <li>Heat the pan, gently wiping it with oiled cloth.</li>
-   <li>When hot, cook your pancakes for 1 min on each side until golden, keeping them warm in a low oven as you go.</li>
-   <li>Garnish with berries and Maple Syrup as desired.</li>
- </ol>
-
- <div class="media">
- <img class="align-self-centre mr-3" src="pancakes.jpg" class="img-rounded"alt="pancakes" style="width:400px;height:500px;">
-
- </div>
+          <ul style="list-style-type:disc">
+            <li>100g plain flour</li>
+            <li>300ml milk</li>
+            <li>2 large free range eggs</li>
+            <li>small dash of oil</li>
+            <li>chopped berries</li>
+            <li>maple syrup (optional)</li>
+          </ul>
+        </div>
 
 
-  <footer class=“container”>
-   <link rel=“stylesheet” href=“https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css“>
-   <p class=“float-right”>
-   <a href=“#” class=“fa fa-facebook”></a>
-   <a href=“#” class=“fa fa-twitter”></a>
-   <a href=“#” class=“fa fa-instagram”></a>
-   <a href=“#” class=“fa fa-youtube”></a>
-   <a href=“#” class=“fa fa-tumblr”></a>
-   <p>&copy; 2018 All About Brunch &middot; <a href=“#”>Privacy</a> &middot; <a href=“#”>Terms</a></p>
-   <p class="float-right"><a href="#">Back to top</a></p>
-  </footer>
+        <div class="col-12">
+          <h4>Method</h4>
 
- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
- <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
- <script src="../../assets/js/vendor/popper.min.js"></script>
- <script src="../../dist/js/bootstrap.min.js"></script>
+          <ol type="1">
+            <li>Place eggs, flour and milk into a bowl and whisk into a smooth batter.</li>
+            <li>Heat the pan, gently wiping it with oiled cloth.</li>
+            <li>When hot, cook your pancakes for 1 min on each side until golden, keeping them warm in a low oven as you go.</li>
+            <li>Garnish with berries and Maple Syrup as desired.</li>
+          </ol>
+        </div>
+      </div>
+    </div>
 
- </body>
- </html>
+        <div class="col-4">
+          <div class="imagecontainer">
+            <img src="pancakes.jpg" class="img-rounded"alt="pancakes" style="width:300px;height:350px;">
+          </div>
+        </div>
+
+        <footer class="container">
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+          <p class="float-right">
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-instagram"></a>
+            <a href="#" class="fa fa-youtube"></a>
+            <a href="#" class="fa fa-tumblr"></a>
+            <p>&copy; 2018 All About Brunch &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+          </footer>
+
+
+          <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+          <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
+          <script src="../../assets/js/vendor/popper.min.js"></script>
+          <script src="../../dist/js/bootstrap.min.js"></script>
+
+        </body>
+        </html>
