--- a/pages/about.html
+++ b/pages/about.html
@@ -32,7 +32,7 @@
 
   <header>
     <nav class="navbar navbar-expand-md fixed-top navbar-light">
-      <a class="navbar-brand" href="index.html">All About Brunch</a>
+      <a class="navbar-brand" href="../index.html">All About Brunch</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon">
         </button>
