--- a/pages/about.html
+++ b/pages/about.html
@@ -42,13 +42,13 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
           <ul class="navbar-nav ">
             <li class="nav-item active">
-              <a class="nav-link" href="pages/about.html">About<span class="sr-only"></span></a>
+              <a class="nav-link" href="about.html">About<span class="sr-only"></span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="pages/hotspots.html">Hotspots<span class="sr-only"></span></a>
+              <a class="nav-link" href="hotspots.html">Hotspots<span class="sr-only"></span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="pages/recipes.html">Recipes<span class="sr-only"></span></a>
+              <a class="nav-link" href="recipes.html">Recipes<span class="sr-only"></span></a>
             </li>
           </ul>
         </div>
