--- a/pages/hotspots.html
+++ b/pages/hotspots.html
@@ -71,7 +71,7 @@
   <header>
 
     <nav class="navbar navbar-expand-md fixed-top navbar-light">
-      <a class="navbar-brand" href="index.html">All About Brunch</a>
+      <a class="navbar-brand" href="../index.html">All About Brunch</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon">
         </button>
@@ -81,13 +81,13 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
           <ul class="navbar-nav ">
             <li class="nav-item active">
-              <a class="nav-link" href="pages/about.html">About<span class="sr-only"></span></a>
+              <a class="nav-link" href="about.html">About<span class="sr-only"></span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="pages/hotspots.html">Hotspots<span class="sr-only"></span></a>
+              <a class="nav-link" href="hotspots.html">Hotspots<span class="sr-only"></span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="pages/recipes.html">Recipes<span class="sr-only"></span></a>
+              <a class="nav-link" href="recipes.html">Recipes<span class="sr-only"></span></a>
             </li>
           </ul>
         </div>
