finished font changes

--- a/pages/hotspots.html
+++ b/pages/hotspots.html
@@ -28,7 +28,6 @@
       left: 450px;
       color: white;
       font-size: 60pt;
-      font-family: "Palatino Linotype"
 
     }
     .navbar{
@@ -38,7 +37,6 @@
       display: flex;
       flex-direction: column;
       text-align: center;
-      font-family: "Palatino Linotype"
     }
     a{
       color:black
@@ -98,7 +96,7 @@
       <div class="window_ntfx">
         <!-- <h1 class="header_title">Brunch hotspots</h1> -->
         <img id="backgroundimage" src="brunch background.jpg" alt="background">
-        <div class="titletext">Brunch hotspots</div>
+        <div class="titletext">Brunch Hotspots</div>
       </div>
     </div>
 
