oops last bit to add

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <div class="jumbotron text-white rounded">
     <div class="jumoboText">
       <h1 class="headerText">Welcome to All About Brunch</h1>
-      <p class="lead font-italic">Your one-stop shop for local hotspots and local hotspots for the best meal of the day.</p>
+      <p class="lead font-italic">Your one-stop shop for local hotspots and recipes for the best meal of the day.</p>
     </div>
   </div>
 </div>
